--- a/ingress/helloworld-service.yaml
+++ b/ingress/helloworld-service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: lighttpd-service
+  name: helloworld-service
 spec:
   type: NodePort
   selector:
-    app: lighttpd
+    app: helloworld
   ports:
   - protocol: TCP
     port: 60002
