--- a/prometheus/config-map.yaml
+++ b/prometheus/config-map.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: prometheus-server-conf
+  name: prometheus-k8s
   labels:
-    name: prometheus-server-conf
+    name: prometheus-k8s
   namespace: prometheus
 data:
   prometheus.rules: |-
