--- a/ConfigMap/config-map-dev.yaml
+++ b/ConfigMap/config-map-dev.yaml
@@ -2,6 +2,7 @@ kind: ConfigMap
 apiVersion: v1
 metadata:
   name: sharky-app-config-dev
+  namespace: dev-environment
 data:
   TITLE: Pics
   NAME: Ed
