--- a/ConfigMap/config-map-dev.yaml
+++ b/ConfigMap/config-map-dev.yaml
@@ -1,3 +1,8 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: dev-environment
+---
 kind: ConfigMap
 apiVersion: v1
 metadata:
@@ -7,5 +12,5 @@ data:
   TITLE: Pics
   NAME: Ed
   config.cfg: |
-    ENV=Dev
-    PIC=https://cbsnews1.cbsistatic.com/hub/i/2012/09/03/23633c73-a645-11e2-a3f0-029118418759/greatwhiteshark.jpg
+    ENV='Dev'
+    PIC='https://cbsnews1.cbsistatic.com/hub/i/2012/09/03/23633c73-a645-11e2-a3f0-029118418759/greatwhiteshark.jpg'
