--- a/ConfigMap/config-map-prod.yaml
+++ b/ConfigMap/config-map-prod.yaml
@@ -1,11 +1,16 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: prod-environment
+---
 kind: ConfigMap
 apiVersion: v1
 metadata:
-  name: sharky-app
+  name: sharky-app-config-prod
   namespace: prod-environment
 data:
   TITLE: Pics
   NAME: Ed
   config.cfg: |
-    ENV=Prod
-    PIC=https://cbsnews1.cbsistatic.com/hub/i/2012/09/03/23633c73-a645-11e2-a3f0-029118418759/greatwhiteshark.jpg
+    ENV='Prod'
+    PIC='https://cbsnews1.cbsistatic.com/hub/i/2012/09/03/23633c73-a645-11e2-a3f0-029118418759/greatwhiteshark.jpg'
