fixed issue with sed

--- a/ConfigMap/deployment-dev.yaml
+++ b/ConfigMap/deployment-dev.yaml
@@ -22,7 +22,7 @@ metadata:
 spec:
   containers:
     - name: sharky-app
-      image: gcr.io/$project_id/flask-app
+      image: gcr.io/IMAGE/flask-app
       command: ["/bin/sh", "-c", "echo $(ENV) > environment.txt"]
       env:
       - name: TITLE
